--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
 <body>
 
 <div class="background">
-	<div class="logo">	
-		<img src="logo.png" alt="My logo">
-	</div>			
+	<div class="logo"> 
+    <a href="index.html"><img src="logo.png" alt="My logo"></a>
+</div>  		
 	<div class="nav">
 	<a class="a" href="index.html">Home</a>	
 	<a class="b" href="about.html">ABOUT ME</a>
