--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="background">
 <div class="logo">	
-		<img src="logo.png" alt="My logo">
+		<a href="index.html"><img src="logo.png" alt="My logo"></a>
 </div>			
 <div class="nav">
 	<a class="a" href="index.html">Home</a>	
