--- a/social.html
+++ b/social.html
@@ -10,8 +10,8 @@
 
 <div class="background">
 	<div class="logo">	
-		<img src="logo.png" alt="My logo">
-	</div>			
+		<a href="index.html"><img src="logo.png" alt="My logo"></a>
+</div>				
 	<div class="nav">
 	<a class="a" href="index.html">Home</a>	
 	<a class="b" href="about.html">ABOUT ME</a>
