--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 <body>
 
 <div class="background">
-	<div class="logo">	
-		<img src="logo.png" alt="My logo">
-	</div>			
-	<div class="nav">
+<div class="logo">	
+		<a href="index.html"><img src="logo.png" alt="My logo"></a>
+</div>			
+<div class="nav">
 	<a class="a" href="index.html">Home</a>	
 	<a class="b" href="about.html">ABOUT ME</a>
 	<a class="c" href="cv.html">CV</a>
@@ -23,13 +23,12 @@
 </div>
 <img class="pic" src="DSC_0321.jpg" alt="Image">
 <div class="para">
-
-<article>
-	<h1>Bipin GC </h1>
-<p>
-	It's me Bipin GC and my age is 19 yrs old. I am a student of BSc. (Hons.) Computing reading in NAMI College which is affiliated with world renowned University of Northampton. I would like to welcome all the viewer in my web page. I am a person with an interesting coding. Coding is not my career rather it's my passion for which I joined the best college of my country.  
-</p>
-</article>
+	<article>
+		<h1>Bipin GC </h1>
+	<p>
+		It's me Bipin GC and my age is 19 yrs old. I am a student of BSc. (Hons.) Computing reading in NAMI College which is affiliated with world renowned University of Northampton. I would like to welcome all the viewer in my web page. I am a person with an interesting coding. Coding is not my career rather it's my passion for which I joined the best college of my country.  
+	</p>
+	</article>
 </div>
 </div>
 
