Upadte of assignment
Final update

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <div class="background">
 <div class="logo">	
-		<a href="index.html"><img src="logo.png" alt="My logo"></a>
+		<img src="logo.png" alt="My logo">
 </div>			
 <div class="nav">
 	<a class="a" href="index.html">Home</a>	
 	<a class="b" href="about.html">ABOUT ME</a>
 	<a class="c" href="cv.html">CV</a>
 	<a class="d" href="Social.html">SOCIAL</a>
-	<a class="e" href="models_gp.html" target="_blank">MODELS</a>
+	<a class="e" href="models.html">MODELS</a>
 	<a class="f" href="contact.html">CONTACT</a>
 </div>
 <div class="description">
