--- a/social.html
+++ b/social.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="logo.png">
 	<title>Social Medias</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -10,14 +9,14 @@
 
 <div class="background">
 	<div class="logo">	
-		<a href="index.html"><img src="logo.png" alt="My logo"></a>
-</div>				
+		<img src="logo.png" alt="My logo">
+	</div>			
 	<div class="nav">
 	<a class="a" href="index.html">Home</a>	
 	<a class="b" href="about.html">ABOUT ME</a>
 	<a class="c" href="cv.html">CV</a>
 	<a class="d" href="social.html">SOCIAL</a>
-	<a class="e" href="models_gp.html" target="_blank">MODELS</a>
+	<a class="e" href="models_gp.html">MODELS</a>
 	<a class="f" href="contact.html">CONTACT</a>
 </div>
 	<img class="img" src="img.jpg">
