--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
 	<link rel="icon" type="image/png" href="logo.png">
 	<title>Contact</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 </head>
 <body>
 
 <div class="background">
-	<div class="logo"> 
-    <a href="index.html"><img src="logo.png" alt="My logo"></a>
-</div>  		
+	<div class="logo">	
+		<img src="logo.png" alt="My logo">
+	</div>			
 	<div class="nav">
 	<a class="a" href="index.html">Home</a>	
 	<a class="b" href="about.html">ABOUT ME</a>
 	<a class="c" href="cv.html">CV</a>
 	<a class="d" href="social.html">SOCIAL</a>
-	<a class="e" href="models_gp.html" target="_blank">MODELS</a>
+	<a class="e" href="models_gp.html">MODELS</a>
 	<a class="f" href="contact.html">CONTACT</a>
 </div>
 
@@ -28,15 +26,15 @@
     <legend> Fill up the form for more queries</legend>
 <form action="mailto:someone@example.com" method="post" enctype="text/plain">
              <label>Firstname: </label>
-             <input type="text" name="a"  placeholder="Your firstname"> <br>
+             <input type="text" name=""  placeholder="Your firstname"> <br>
               <label>Lastname: </label>
-             <input type="text" name="a"  placeholder="Your surname"><br>
+             <input type="text" name=""  placeholder="Your surname"><br>
               <label>Address: </label>
-             <input type="text" name="a"  placeholder="Your Address"><br>
+             <input type="text" name=""  placeholder="Your Address"><br>
               <label>Contact Number: </label>
-             <input type="Number" name="a"  placeholder="Your phone number.." required><br>
+             <input type="Number" name=""  placeholder="Your phone number.." required><br>
               <label>Email: </label>    
-             <input type="email" name="a"  placeholder="Your email" required ><br>
+             <input type="email" name=""  placeholder="Your email" required ><br>
               <label for="country">Country</label>
               <select id="country" name="country">
                 <option value="uk">UK</option>
@@ -48,12 +46,12 @@
 
               <label for="subject">Subject</label>
               <textarea id="subject" name="subject" placeholder="Write something.." required></textarea>
-              <br>
+              </br>
     <input type="submit" value="Submit">
     <input type="reset" value="Reset">
   </form>
   <div class="map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.907514006272!2d85.2692096143115!3d27.689253232895307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb229d7645ff5b%3A0x3f61ea9f01cc011c!2sDhunga+Adda%2CTinthana%2C+Kalanki!5e0!3m2!1sen!2snp!4v1524075396836"  allowfullscreen></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.907514006272!2d85.2692096143115!3d27.689253232895307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb229d7645ff5b%3A0x3f61ea9f01cc011c!2sDhunga+Adda%2CTinthana%2C+Kalanki!5e0!3m2!1sen!2snp!4v1524075396836" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </fieldset>
 
