--- a/cv.html
+++ b/cv.html
@@ -1,11 +1,10 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8">
 	<link rel="icon" type="image/png" href="logo.png">
 	<title>CV</title>
 	<link rel="stylesheet" type="text/css" href="cv.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+
 </head>
 <body>
 
@@ -19,16 +18,16 @@
 	<a class="b" href="about.html">ABOUT ME</a>
 	<a class="c" href="cv.html">CV</a>
 	<a class="d" href="social.html">SOCIAL</a>
-	<a class="e" href="models_gp.html" target="_blank">MODELS</a>
+	<a class="e" href="models_gp.html">MODELS</a>
 	<a class="f" href="contact.html">CONTACT</a>
 </div>
 <div class="ParallaxContainer">
 <section>
    
    <div class="person">
-        <h2 > Curriculum Vitae </h2>
+        <h2 align='center' > Curriculum Vitae </h2>
               <div class="pp">
-    <img src="pp.jpg" alt="?">
+    <img src="pp.jpg">
     </div>   
         <h5>Personal Information:</h5>
     <ul>
@@ -81,8 +80,12 @@
     </div>
   
   <div class="ContentContainer">
+
+      
+
+    </div>
+
   </div>
-</div>
 </div>
     <footer>
     Copyright© 2018, BIPIN GC
